# codingame-puzzle-hs

./: LICENSE  README.md  hie.yaml  puzzle.cabal
src/: playground.hs
src/bot-programming/spring-challenge-2020/: spring-challenge-2020.hs
src/bot-programming/spring-challenge-2021/: spring-challenge-2021.hs
src/bot-programming/spring-challenge-2022/: spring-challenge-2022.hs
src/contests/spring-challenge-2020/: spring-challenge-2020.hs
src/easy/: 1d-spreadsheet.hs  mars-lander-episode-1.hs
src/medium/: mars-lander-episode-2.hs  shadows-of-the-knight-episode-1.hs  stock-exchange-losses.hs  there-is-no-spoon-episode-1.hs  what-the-brainfuck.hs
