name:                puzzle
version:             0.1.0.0
homepage:            https://github.com/lifchicker/codingame-puzzle-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksei 'lifchicker' Antonov
maintainer:          1ifeh4ck3r@gmail.com
copyright:           2019 Aleksei 'lifchicker' Antonov
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable 1dspreadsheet
  main-is:             src/easy/1d-spreadsheet.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,containers
  default-language:    Haskell2010

executable shadows-of-the-knight-episode-1
  main-is:             src/medium/shadows-of-the-knight-episode-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,containers
  default-language:    Haskell2010

executable stock-exchange-losses
  main-is:             src/medium/stock-exchange-losses.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,containers
  default-language:    Haskell2010

executable there-is-no-spoon-episode-1
  main-is:             src/medium/there-is-no-spoon-episode-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,containers
  default-language:    Haskell2010
